--- a/index.html
+++ b/index.html
@@ -1,65 +1,137 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>Finans Takibi</title>
-  <style>
-    body { font-family: Arial; background:#f5f5f5; padding:30px; }
-    input { margin:5px; padding:5px; }
-    .box { background:white; padding:20px; border-radius:8px; max-width:400px; }
-  </style>
+<meta charset="UTF-8">
+<title>Çağrı – Finansal Genel Bakış</title>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<style>
+body { font-family: Arial; background:#f2f2f2; margin:0; padding:20px }
+h1, h2 { margin-top:40px }
+.section { background:#fff; padding:20px; border-radius:8px; margin-bottom:30px }
+.grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(300px,1fr)); gap:20px }
+.card { background:#fafafa; padding:15px; border-radius:6px }
+table { width:100%; border-collapse:collapse }
+td, th { border-bottom:1px solid #ddd; padding:8px }
+.small { color:#666; font-size:14px }
+</style>
 </head>
 <body>
 
-<div class="box">
-  <h2>Güncel Kurlar</h2>
-  <div id="rates">Yükleniyor...</div>
+<h1>📊 Çağrı – Finansal Durum Paneli (Demo)</h1>
+<p class="small">Tüm veriler örnektir. Sadece görsel ve fikir amaçlıdır.</p>
 
-  <h3>Varlıklar</h3>
-  TL: <input id="tl" type="number" value="0"><br>
-  USD: <input id="usd" type="number" value="0"><br>
-  Gram Altın: <input id="gold" type="number" value="0"><br>
+<div class="section">
+<h2>💰 Toplam Varlık (TL)</h2>
+<canvas id="totalChart"></canvas>
+</div>
 
-  <button onclick="calculate()">Hesapla</button>
+<div class="section grid">
+<div class="card">
+<h3>💵 Döviz Dağılımı</h3>
+<canvas id="fxChart"></canvas>
+</div>
 
-  <h3 id="total"></h3>
+<div class="card">
+<h3>🪙 Altın Birikimi (Gram)</h3>
+<canvas id="goldChart"></canvas>
+</div>
+</div>
+
+<div class="section">
+<h2>🪙 Altın Alımları</h2>
+<table>
+<tr><th>Tarih</th><th>Miktar (gr)</th><th>Açıklama</th></tr>
+<tr><td>2023-02</td><td>20</td><td>İlk yatırım</td></tr>
+<tr><td>2023-07</td><td>15</td><td>Düşüşten alım</td></tr>
+<tr><td>2024-01</td><td>25</td><td>Uzun vade</td></tr>
+<tr><td>2024-10</td><td>30</td><td>Portföy artırımı</td></tr>
+</table>
+</div>
+
+<div class="section">
+<h2>🏠 Gayrimenkul – Çağrı’nın Evi</h2>
+<canvas id="houseChart"></canvas>
+<p class="small">
+2020: 1.200.000 TL<br>
+2022: 2.100.000 TL<br>
+2024: 4.500.000 TL
+</p>
+</div>
+
+<div class="section">
+<h2>📉 Enflasyon Etkisi (Reel Değer)</h2>
+<canvas id="inflationChart"></canvas>
+<p class="small">
+2023 Enflasyon: %64<br>
+2024 Enflasyon: %68
+</p>
 </div>
 
 <script>
-let rates = { usd: 0, gold: 0 };
-
-async function loadRates() {
-  try {
-    const res = await fetch(
-      "https://api.codetabs.com/v1/proxy?quest=https://finans.truncgil.com/today.json"
-    );
-    const data = await res.json();
-
-    rates.usd = Number(data["USD"]["Satış"].replace(",", "."));
-    rates.gold = Number(data["gram-altin"]["Satış"].replace(",", "."));
-
-    document.getElementById("rates").innerText =
-      `USD: ${rates.usd.toFixed(2)} TL | Gram Altın: ${rates.gold.toFixed(2)} TL`;
-  } catch (e) {
-    document.getElementById("rates").innerText =
-      "Kurlar alınamadı ❌";
-    console.error(e);
+// TOPLAM VARLIK
+new Chart(totalChart, {
+  type: 'line',
+  data: {
+    labels: ['2023', '2024', '2025'],
+    datasets: [{
+      label: 'Toplam Varlık (TL)',
+      data: [850000, 1350000, 2100000],
+      borderWidth: 2
+    }]
   }
-}
+});
 
-function calculate() {
-  const total =
-    Number(tl.value) +
-    Number(usd.value) * rates.usd +
-    Number(gold.value) * rates.gold;
+// DÖVİZ
+new Chart(fxChart, {
+  type: 'pie',
+  data: {
+    labels: ['TL', 'USD', 'EUR'],
+    datasets: [{
+      data: [45, 35, 20]
+    }]
+  }
+});
 
-  document.getElementById("total").innerText =
-    "Toplam Varlık (TL): " + total.toFixed(2);
-}
+// ALTIN
+new Chart(goldChart, {
+  type: 'bar',
+  data: {
+    labels: ['2023', '2024', '2025'],
+    datasets: [{
+      label: 'Gram Altın',
+      data: [35, 70, 90]
+    }]
+  }
+});
 
-loadRates();
+// EV
+new Chart(houseChart, {
+  type: 'line',
+  data: {
+    labels: ['2020', '2022', '2024'],
+    datasets: [{
+      label: 'Ev Değeri (TL)',
+      data: [1200000, 2100000, 4500000],
+      borderWidth: 2
+    }]
+  }
+});
+
+// ENFLASYON
+new Chart(inflationChart, {
+  type: 'line',
+  data: {
+    labels: ['2023', '2024'],
+    datasets: [{
+      label: 'Nominal Değer',
+      data: [1500000, 2100000]
+    },{
+      label: 'Reel Değer',
+      data: [915000, 1250000]
+    }]
+  }
+});
 </script>
-
 
 </body>
 </html>
